# qazcode

./: README.md  docker-compose.yml
fastapi/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.embeddings  README.md  docker-compose.yml  evaluate.py  pyproject.toml  requirements-docker.txt  small_evaluate.py
fastapi/eva/: my_run.jsonl  my_run_metrics.json
fastapi/evals/: my_run.jsonl  my_run_metrics.json
fastapi/extracted_data/: analyzed_p_005c999df9_957_17022026.json  analyzed_p_0091ab7702_72_17022026.json  analyzed_p_0092f99670_399_17022026.json  analyzed_p_00f19c934c_718_17022026.json  analyzed_p_018d0b3c52_996_17022026.json  analyzed_p_01f3a22e9f_186_17022026.json  analyzed_p_029838d829_525_17022026.json  analyzed_p_03063596dd_250_17022026.json  analyzed_p_056d1490b1_313_17022026.json  analyzed_p_068a0e95c2_1091_17022026.json  analyzed_p_087071a5a7_1128_17022026.json  analyzed_p_112bd4a8ea_259_17022026.json  analyzed_p_1174380b45_6_17022026.json  analyzed_p_128eb59e62_962_17022026.json  analyzed_p_13c0c406ae_534_17022026.json  analyzed_p_174605ece8_655_17022026.json  analyzed_p_18401ff12c_139_17022026.json  analyzed_p_186d4cae40_258_17022026.json  analyzed_p_187fd854dc_248_17022026.json  analyzed_p_1d651bfe6f_894_17022026.json  analyzed_p_1d859b3003_445_17022026.json  analyzed_p_1e99277b81_926_17022026.json  analyzed_p_1ea3af5060_567_17022026.json  analyzed_p_1ef93b67f5_333_17022026.json  analyzed_p_1f128ab845_896_17022026.json  analyzed_p_20bdf50f3f_505_17022026.json  analyzed_p_223d2f55dd_994_17022026.json  (+194 more)
fastapi/notebooks/: test1.ipynb  (+1 more)
(+14 files in other folders)
