[project]
name = "hack-nu"
version = "0.1.0"
description = "Evaluates solutions on a given dataset"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "aiohttp>=3.9.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "ipykernel>=7.2.0",
    "openai>=2.21.0",
    "dotenv>=0.9.9",
    "requests>=2.32.5",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.10",
    "langchain-text-splitters>=1.1.1",
    "langchain-community>=0.4.1",
    "bs4>=0.0.2",
    "langchain-chroma>=1.1.0",
    "jq>=1.11.0",
    "sentence-transformers>=3.0.0",
    "flashrank>=0.2.10",
    "langchain-classic>=1.0.1",
]
